--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="js/functions.js" defer></script>
     <script type="text/javascript" src="js/buttons.js" defer></script></script>
     <link rel="stylesheet" href="styles.css">
-    <title>Randomizer</title>
+    <title>RNDMZR</title>
   </head>
   <body>
     <div id="header"><img src="img/logo.png" style="width: 10vh; position: fixed; left: 0; top: 0; background-color: rgb(20, 20, 30)">Randomizer</div>
