--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   </head>
   <body>
     <div id="header"><img src="img/logo.png" style="width: 10vh; position: fixed; left: 0; top: 0; background-color: rgb(20, 20, 30); z-index: 5">Randomizer</div>
-    <div id="navBar">Made by MijuTzy</div>
+    <div id="navBar">Made by MijuTzy<br>
+    "Sorry if you have wrongs because of your spelling typos! This is a website rushed in 2 days in order for me to study, but I shared this to y'all because I thought people like me would find this useful. Again, sorry!"</div>
 
     <div class="contentColumn" id="leftCol">
       <div class="modal" id="help">
